--- a/docker-compose.database.yaml
+++ b/docker-compose.database.yaml
@@ -7,7 +7,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: lainbow_db
     ports:
-      - ${POSTGRES_PORT}:5432
+      - ${POSTGRES_PORT:-5433}:5432
     volumes:
       - type: bind
         source: ${DATABASE_DATA_ROOT_DIR:-.}/postgres_data
