--- a/docker-compose.inference.yaml
+++ b/docker-compose.inference.yaml
@@ -28,3 +28,33 @@ services:
       retries: 5
       start_period: 60s
     command: ["uvicorn", "inference.main:app", "--host", "0.0.0.0", "--port", "8001", "--reload"]
+  inference_api_rocm:
+    build:
+      context: .
+      dockerfile: docker/inference.rocm.Dockerfile
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    container_name: lainbow_inference_api_rocm
+    ports:
+      - "${INFERENCE_API_PORT:-8001}:8001"
+    volumes:
+      - ./src:/src
+      - ./models:/src/models
+    env_file:
+      - .env
+    devices:
+      - /dev/kfd
+      - /dev/dri
+    group_add:
+      - video
+      - render
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+    command: ["uvicorn", "inference.main:app", "--host", "0.0.0.0", "--port", "8001", "--reload"]
+    profiles:
+      - rocm
