--- a/docker-compose.inference.yaml
+++ b/docker-compose.inference.yaml
@@ -28,6 +28,8 @@ services:
       retries: 5
       start_period: 60s
     command: ["uvicorn", "inference.main:app", "--host", "0.0.0.0", "--port", "8001", "--reload"]
+    profiles:
+      - cuda
   inference_api_rocm:
     build:
       context: .
