feat: load models on startup

--- a/.env.template
+++ b/.env.template
@@ -34,6 +34,7 @@
 # "multi": Keeps multiple models in memory, faster for frequent switching.
 #INFERENCE_MODEL_MANAGER_MODE=single
 #INFERENCE_REQUEST_TIMEOUT=30.0
+#INFERENCE_MODELS_TO_LOAD_ON_STARTUP=muq,muq_mulan
 
 
 ##### Batch server #####
