--- a/.env.template
+++ b/.env.template
@@ -33,6 +33,8 @@
 # "single": Loads one model at a time, conserving VRAM.
 # "multi": Keeps multiple models in memory, faster for frequent switching.
 #INFERENCE_MODEL_MANAGER_MODE=single
+#INFERENCE_REQUEST_TIMEOUT=30.0
+#INFERENCE_MODELS_TO_LOAD_ON_STARTUP=muq,muq_mulan
 
 
 ##### Batch server #####
