--- a/.env.template
+++ b/.env.template
@@ -22,6 +22,8 @@
 #MINIO_PORT_CONSOLE=9002
 #MILVUS_PORT_API=19530
 #MILVUS_PORT_MANAGEMENT=9091
+#QDRANT_PORT_HTTP=6333
+#QDRANT_PORT_GRPC=6334
 
 
 ##### Inference server #####
