--- a/docker-compose.database.yaml
+++ b/docker-compose.database.yaml
@@ -40,70 +40,94 @@ services:
       timeout: 5s
       retries: 30
 
-  etcd:
-    image: quay.io/coreos/etcd:v3.5.18
-    container_name: lainbow_milvus_etcd
-    environment:
-      - ETCD_AUTO_COMPACTION_MODE=revision
-      - ETCD_AUTO_COMPACTION_RETENTION=1000
-      - ETCD_QUOTA_BACKEND_BYTES=4294967296
-      - ETCD_SNAPSHOT_COUNT=50000
-    volumes:
-      - type: bind
-        source: ${DATABASE_DATA_ROOT_DIR:-.}/milvus_etcd_data
-        target: /etcd
-    command: etcd -advertise-client-urls=http://etcd:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "etcdctl", "endpoint", "health"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+  # etcd:
+  #   image: quay.io/coreos/etcd:v3.5.18
+  #   container_name: lainbow_milvus_etcd
+  #   environment:
+  #     - ETCD_AUTO_COMPACTION_MODE=revision
+  #     - ETCD_AUTO_COMPACTION_RETENTION=1000
+  #     - ETCD_QUOTA_BACKEND_BYTES=4294967296
+  #     - ETCD_SNAPSHOT_COUNT=50000
+  #   volumes:
+  #     - type: bind
+  #       source: ${DATABASE_DATA_ROOT_DIR:-.}/milvus_etcd_data
+  #       target: /etcd
+  #   command: etcd -advertise-client-urls=http://etcd:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+  #   restart: unless-stopped
+  #   healthcheck:
+  #     test: ["CMD", "etcdctl", "endpoint", "health"]
+  #     interval: 30s
+  #     timeout: 20s
+  #     retries: 3
 
-  minio:
-    image: minio/minio:RELEASE.2023-03-20T20-16-18Z
-    container_name: lainbow_milvus_minio
-    environment:
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
-    ports:
-      - ${MINIO_PORT_API:-9001}:9000
-      - ${MINIO_PORT_CONSOLE:-9002}:9001
-    volumes:
-      - type: bind
-        source: ${DATABASE_DATA_ROOT_DIR:-.}/milvus_minio_data
-        target: /minio_data
-    command: minio server /minio_data --console-address ":9001"
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+  # minio:
+  #   image: minio/minio:RELEASE.2023-03-20T20-16-18Z
+  #   container_name: lainbow_milvus_minio
+  #   environment:
+  #     MINIO_ACCESS_KEY: minioadmin
+  #     MINIO_SECRET_KEY: minioadmin
+  #   ports:
+  #     - ${MINIO_PORT_API:-9001}:9000
+  #     - ${MINIO_PORT_CONSOLE:-9002}:9001
+  #   volumes:
+  #     - type: bind
+  #       source: ${DATABASE_DATA_ROOT_DIR:-.}/milvus_minio_data
+  #       target: /minio_data
+  #   command: minio server /minio_data --console-address ":9001"
+  #   restart: unless-stopped
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+  #     interval: 30s
+  #     timeout: 20s
+  #     retries: 3
 
-  milvus:
-    image: milvusdb/milvus:v2.5.13
-    container_name: lainbow_milvus_standalone
-    command: ["milvus", "run", "standalone"]
-    security_opt:
-    - seccomp:unconfined
-    environment:
-      ETCD_ENDPOINTS: etcd:2379
-      MINIO_ADDRESS: minio:9000
+  # milvus:
+  #   image: milvusdb/milvus:v2.5.13
+  #   container_name: lainbow_milvus_standalone
+  #   command: ["milvus", "run", "standalone"]
+  #   security_opt:
+  #   - seccomp:unconfined
+  #   environment:
+  #     ETCD_ENDPOINTS: etcd:2379
+  #     MINIO_ADDRESS: minio:9000
+  #   volumes:
+  #     - type: bind
+  #       source: ${DATABASE_DATA_ROOT_DIR:-.}/milvus_milvus_data
+  #       target: /var/lib/milvus
+  #   ports:
+  #     - ${MILVUS_PORT_API:-19530}:19530
+  #     - ${MILVUS_PORT_MANAGEMENT:-9091}:9091
+  #   depends_on:
+  #     - etcd
+  #     - minio
+  #   restart: unless-stopped
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
+  #     interval: 30s
+  #     start_period: 90s
+  #     timeout: 20s
+  #     retries: 3
+
+  qdrant:
+    image: qdrant/qdrant:v1.16
+    container_name: lainbow_qdrant
+    ports:
+      - ${QDRANT_PORT_HTTP:-6333}:6333
+      - ${QDRANT_PORT_GRPC:-6334}:6334
     volumes:
       - type: bind
-        source: ${DATABASE_DATA_ROOT_DIR:-.}/milvus_milvus_data
-        target: /var/lib/milvus
-    ports:
-      - ${MILVUS_PORT_API:-19530}:19530
-      - ${MILVUS_PORT_MANAGEMENT:-9091}:9091
-    depends_on:
-      - etcd
-      - minio
+        source: ${DATABASE_DATA_ROOT_DIR:-.}/qdrant_data
+        target: /qdrant/storage
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
+      test:
+        [
+          "CMD",
+          "bash",
+          "-c",
+          "exec 3<>/dev/tcp/127.0.0.1/6333 && echo -e 'GET /readyz HTTP/1.1\\r\\nHost: localhost\\r\\nConnection: close\\r\\n\\r\\n' >&3 && grep -q 'HTTP/1.1 200' <&3",
+        ]
       interval: 30s
-      start_period: 90s
+      start_period: 60s
       timeout: 20s
       retries: 3
